--- a/src/FTTBlazor/Components/Forms/Input/FTTCheckbox.razor
+++ b/src/FTTBlazor/Components/Forms/Input/FTTCheckbox.razor
@@ -4,7 +4,7 @@
 
     @if (!string.IsNullOrEmpty(_id))
     {
-        <div class="ftt-blazor-components ftt-blazor-checkbox @BorderRightCssClass" style=" margin-left: 0.3rem;">
+        <div class="ftt-blazor-components ftt-blazor-checkbox @BorderRightCssClass">
 
             <input id="@_id" name="@_id" role="@_id" disabled="@_IsReadOnly" type="checkbox" @attributes="@attributes" value="@_value" @onchange="@(e=>{ ValueChanged.InvokeAsync((bool)e.Value);})" />
 
