--- a/src/FTTBlazor/wwwroot/fttBlazor.css
+++ b/src/FTTBlazor/wwwroot/fttBlazor.css
@@ -295,10 +295,10 @@
 
     .ftt-blazor-has-float-label input, .ftt-blazor-has-float-label textarea {
         /*padding-left: 16px;*/
-        min-height: 56px;
+        min-height: 30px;
         color: var(--brandtext);
         border-bottom: 1px solid var(--brandline);
-        width: 100%;
+        width: 97.8%;
     }
 
     .ftt-blazor-has-float-label > label {
@@ -390,12 +390,12 @@
     }
 
 .ftt-blazor-checkbox {
-    background-color: transparent;
+    /*background-color: transparent;
     display: block;
     position: relative;
     height: 56px;
     width: 100%;
-    border-bottom: 1px solid var(--brandline);
+    border-bottom: 1px solid var(--brandline);*/
     min-height: 5.05rem;
 }
 
@@ -468,16 +468,16 @@
         }
 
     .ftt-blazor-checkbox input {
-        width: 32px;
+        /* width: 32px;
         height: 32px;
         -webkit-box-ordinal-group: 2;
         order: 1;
-        z-index: 1;
+        z-index: 1;*/
         position: absolute;
-        top: 50%;
+        /*top: 50%;
         -webkit-transform: translateY(-50%);
         transform: translateY(-50%);
-        cursor: pointer;
+        cursor: pointer;*/
         visibility: hidden;
     }
 
@@ -546,7 +546,7 @@
 
 .ftt-blazor-select {
     border-bottom: 1px solid var(--brandline);
-    padding-left: 1rem;
+    padding-left: 0.65rem;
     font-size: 1rem;
 }
 
@@ -582,10 +582,12 @@
 
 .ftt-blazor-align-left {
     margin-left: 0px;
+    display: inline-grid;
+    padding-left: 0.36rem;
 }
 
 .ftt-blazor-input {
-    padding-left: 1rem;
+    /*padding-left: 1rem;*/
 }
 
 
@@ -622,98 +624,6 @@
 
     .ftt-blazor-input-icon .material-icons:hover, .mdc-icon-button .material-icons:hover {
         background-color: transparent !important;
-    }
-
-.ftt-blazor-checkbox {
-    background-color: transparent;
-    display: block;
-    position: relative;
-    height: 56px;
-    width: 100%;
-    border-bottom: 1px solid var(--brandline);
-}
-
-    .ftt-blazor-checkbox label {
-        width: 100%;
-        display: block;
-        text-align: left;
-        color: #3C454C;
-        cursor: pointer;
-        position: relative;
-        z-index: 1;
-        -webkit-transition: color 200ms ease-in;
-        transition: color 200ms ease-in;
-        overflow: hidden;
-        padding-left: 56px;
-        padding-top: 18px;
-        height: 100%;
-    }
-
-        .ftt-blazor-checkbox label:before {
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            content: '';
-            background-color: transparent;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            -webkit-transform: translate(-50%, -50%) scale3d(1, 1, 1);
-            transform: translate(-50%, -50%) scale3d(1, 1, 1);
-            -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
-            transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
-            opacity: 0;
-            z-index: -1;
-        }
-
-        .ftt-blazor-checkbox label:after {
-            width: 24px;
-            height: 24px;
-            content: '';
-            border: 2px solid #D1D7DC;
-            background-color: #fff;
-            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
-            background-repeat: no-repeat;
-            background-position: 2px 3px;
-            border-radius: 50%;
-            z-index: 2;
-            position: absolute;
-            left: 16px;
-            top: 50%;
-            -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-            cursor: pointer;
-            -webkit-transition: all 200ms ease-in;
-            transition: all 200ms ease-in;
-        }
-
-    .ftt-blazor-checkbox input:checked ~ label {
-        /*color: #fff!important;*/
-    }
-
-        .ftt-blazor-checkbox input:checked ~ label:before {
-            -webkit-transform: translate(-50%, -50%) scale3d(56, 56, 1);
-            transform: translate(-50%, -50%) scale3d(56, 56, 1);
-            opacity: 1;
-        }
-
-        .ftt-blazor-checkbox input:checked ~ label:after {
-            background-color: var(--brandtwo);
-            border-color: var(--brandtwo);
-        }
-
-    .ftt-blazor-checkbox input {
-        width: 32px;
-        height: 32px;
-        -webkit-box-ordinal-group: 2;
-        order: 1;
-        z-index: 1;
-        position: absolute;
-        top: 50%;
-        -webkit-transform: translateY(-50%);
-        transform: translateY(-50%);
-        cursor: pointer;
-        visibility: hidden;
     }
 
 .ftt-blazor-color-selector {
